--- a/src/styles.css
+++ b/src/styles.css
@@ -35,18 +35,18 @@ a {
 
 .instructions {
   padding: 16px;
-  border: 1px solid rgba(39, 33, 66, 0.5);
+  border: 1px solid rgba(48, 26, 145, 0.5);
   width: 80%;
   font-size: 16px;
   border-radius: 50px;
   line-height: 20px;
-  color: #272044;
+  color: darkblue;
 }
 
 .submit-button {
   margin-left: 10px;
   background-color: rgb(240, 141, 130);
-  color: white;
+  color: darkblue;
   border: none;
   border-radius: 50px;
   padding: 14px 24px;
@@ -59,11 +59,12 @@ a {
   line-height: 24px;
   background-color: rgb(246, 209, 205);
   border-left: 3px solid rgb(240, 141, 130);
-  color: black;
+  color: darkblue;
 }
 
 footer {
   text-align: center;
   font-size: 13px;
   margin-top: 30px;
+  color: darkblue;
 }
